[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "flaky: marks tests as flaky (deselect with '-m \"not flaky\"')",
]

[tool.poetry]
name = "cosmpy"
version = "0.6.1"
description = "A library for interacting with the cosmos networks"
authors = ["Fetch.AI Limited"]
readme = "README.md"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
ecdsa = "*"
bech32 = "*"
requests = "*"
protobuf = ">=3.19.4,<4"
grpcio = "==1.47.0"
bip-utils = "*"
blspy = "*"
google-api-python-client = "*"
jsonschema = ">=3.2.0,<5"

[tool.poetry.group.dev.dependencies]
check-manifest = "*"
tox = "==3.25.1"
flake8 = "==5.0.4"
black = "==22.6"
mypy = "==0.971"
bandit = "==1.7.4"
safety = "==2.1.1"
isort = "==5.10.1"
darglint = "==1.8.1"
vulture = "==2.5"
pylint = "==2.14.0"
liccheck = "==0.7.2"
flake8-copyright = "==0.2.3"
grpcio-tools = "==1.47.0"
flake8-bugbear = "==22.7.1"
flake8-eradicate = "==1.3.0"
flake8-docstrings = "==1.6.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "==8.4"
pydoc-markdown = "==4.6.3"


[tool.poetry.group.test.dependencies]
coverage = "*"
pytest = "*"
pytest-rerunfailures = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

